# schwab-mcp-server

./: .gitignore  README.md  auth.ps1  claude_desktop_config.example.json  exchange_code.py  get_token.py  pyproject.toml
.claude/: settings.local.json
config/: .env.example  token.template.json
src/schwab_mcp/: __init__.py  auth.py  client.py  config.py  server.py
src/schwab_mcp/tools/: __init__.py  account.py  history.py  options.py  quotes.py
tests/: __init__.py  test_auth.py  test_config.py  test_tools.py
